--- a/css/style.css
+++ b/css/style.css
@@ -269,3 +269,157 @@ html {
   margin-right: -7rem;
   margin-bottom: 6rem;
 }
+
+@media (max-width: 1100px) {
+  .player--3 {
+    margin-bottom: 2rem;
+    margin-right: 10rem;
+    text-align: center;
+  }
+  .player--4 {
+    margin-top: 1rem;
+    margin-right: 10rem;
+    text-align: center;
+  }
+  .player--1-hidden {
+    margin-top: 3rem;
+  }
+  .player--3-hidden {
+    margin-right: 12rem;
+  }
+  .player--4-hidden {
+    margin-right: 12rem;
+  }
+  .dice {
+    top: 40%;
+    left: 44%;
+    height: 20vh;
+    width: 12vw;
+  }
+}
+@media (max-width: 750px) {
+  .player--1 {
+    margin-bottom: -4rem;
+    margin-left: 2rem;
+    text-align: center;
+  }
+  .player--2 {
+    margin-top: -4rem;
+    margin-left: 2rem;
+    text-align: center;
+  }
+  .player--3 {
+    margin-top: -4rem;
+    margin-right: 10rem;
+    text-align: center;
+  }
+  .player--4 {
+    margin-bottom: -4rem;
+    margin-right: 10rem;
+    text-align: center;
+  }
+  .player--1-hidden {
+    margin-bottom: 3rem;
+  }
+  .player--2-hidden {
+    margin-top: 3rem;
+  }
+  .player--3-hidden {
+    margin-top: 3rem;
+    margin-right: 10rem;
+  }
+  .player--4-hidden {
+    margin-bottom: 3rem;
+    margin-right: 10rem;
+  }
+  .dice {
+    top: 44%;
+    left: 46%;
+    height: 11vh;
+    width: 8vw;
+  }
+  h3 {
+    display: none;
+  }
+  .player--1-heading,
+  .player--2-heading,
+  .player--3-heading,
+  .player--4-heading {
+    display: none;
+  }
+  .reset {
+    position: absolute;
+    top: 0.5rem;
+    left: 38%;
+    /* cursor: pointer; */
+  }
+  .current--1,
+  .current--2,
+  .current--3,
+  .current--4 {
+    background-color: white;
+    width: 3rem;
+    margin: 0.5rem;
+    text-align: center;
+    border-radius: 5rem;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0);
+  }
+}
+
+@media (max-width: 655px) {
+  .dice-icon {
+    display: none;
+  }
+  .hold-icon {
+    display: none;
+  }
+  .roll-dice-1,
+  .roll-dice-2,
+  .roll-dice-3,
+  .roll-dice-4,
+  .hold-1,
+  .hold-2,
+  .hold-3,
+  .hold-4 {
+    padding: 0.4rem;
+
+    width: 6rem;
+  }
+}
+@media (max-width: 520px) {
+  .player--1 {
+    margin-bottom: -2rem;
+  }
+  .player--2 {
+    margin-top: -4rem;
+  }
+  .player--3 {
+    margin-top: -4rem;
+    margin-right: 6rem;
+  }
+  .player--4 {
+    margin-bottom: -2.5rem;
+    margin-right: 6rem;
+  }
+  .player--1-hidden {
+    margin-bottom: 4rem;
+  }
+  .player--2-hidden {
+    margin-top: 4rem;
+  }
+  .player--3-hidden {
+    margin-top: 4rem;
+    margin-right: 5rem;
+  }
+  .player--4-hidden {
+    margin-bottom: 4rem;
+    margin-right: 5rem;
+  }
+}
+
+@media (max-width: 492px) {
+  .roll-hold-container-3,
+  .roll-hold-container-4 {
+    margin-left: 6rem;
+  }
+}
